---------------------------------------------------------------------------------------------------
Version: 1.5.0

  Features:
    - Add toggle/shortcut to take a screenshot (on paused active camera)
    - Add option to include GUI in screenshots (requires to have same camera resolution as game/screen resolution to make this look good)
    - Visualize capture regions on the map. (Thanks drdozer)

  Changes:
    - Use 10 digits for screenshot numbers.
    - Use 'transition' when mentioning camera movement (instead of zoom)
    - Fix camera transition issue, caused when camera is paused during transition (active transitions will be BROKEN)

  Bugfixes:
    - Recalculate base size for selected surface

---------------------------------------------------------------------------------------------------
Version: 1.4.5
Date: 25-08-2022
  Minor Features:
    - Added an always daylight toggle to cameras. (Thanks drdozer)
    - Optionally keep player tracker enabled when building.

---------------------------------------------------------------------------------------------------
Version: 1.4.4
Date: 03-07-2022
  Minor Features:
    - Store screenshots in a sub-directory if the camera name contains a slash.
  Bugfixes:
    - Each camera must have its own sequential numbering when enabled.

---------------------------------------------------------------------------------------------------
Version: 1.4.3
Date: 11-12-2021
  Bugfixes:
    - Fix smooth zooming when user changed active tracker.

---------------------------------------------------------------------------------------------------
Version: 1.4.2
Date: 27-07-2021
  Gui:
    - Improve max-zoom message and add tooltips for camera settings.
  Bugfixes:
    - Fix (default) shortcut key sequence.
    - Make sure the zoom level is adjusted when resolution changes to keep the same area in the screenshots.
      Note: Be careful when to change resolution, as this will abort/mess up any smooth camera movement that is active!